# tree-sitter-c-playground

./: CMakeLists.txt  README.md  local-build.cmd
src/: main.c
